--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 
 <body>
     <div class="ani"></div>
-        <div class="fixed">
-            <a href="https://m.facebook.com/okunola.kenny.7" data-aos="fade-left"> <i class="fab fa-facebook icons fa-2x"></i></a>
-            <a href="https://t.me/Kenny_Sleem" data-aos="fade-left"><i class="fab fa-telegram icons fa-2x"></i></a>
-            <a href="https://www.linkedin.com/in/okunola-kehinde-53951a238" data-aos="fade-left"><i
-                    class="fab fa-linkedin icons fa-2x"></i></a>
-            <a href="https://wa.me/2349051708688" data-aos="fade-left"> <i class="fab fa-whatsapp icons fa-2x"></i></a>
-            <a href="https://github.com/Okunolakenny" data-aos="fade-left"> <i class="fab fa-github icons fa-2x"></i></a>
-        </div>
+    <div class="fixed">
+        <a href="https://m.facebook.com/okunola.kenny.7" data-aos="fade-left"> <i
+                class="fab fa-facebook icons fa-2x"></i></a>
+        <a href="https://t.me/Kenny_Sleem" data-aos="fade-left"><i class="fab fa-telegram icons fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/okunola-kehinde-53951a238" data-aos="fade-left"><i
+                class="fab fa-linkedin icons fa-2x"></i></a>
+        <a href="https://wa.me/2349051708688" data-aos="fade-left"> <i class="fab fa-whatsapp icons fa-2x"></i></a>
+        <a href="https://github.com/Okunolakenny" data-aos="fade-left"> <i class="fab fa-github icons fa-2x"></i></a>
+    </div>
     <nav>
         <div class="container">
             <div class="logo" data-aos="fade-right">
@@ -56,63 +57,67 @@
 
     <section id="index" data-aos="flip-left">
         <div class="container1">
-            <div class="text" data-aos="fade-right" >
-                <div>
-                    <h1 data-aos="zoom-out" data-aos-duration="3000">DELICACY</h1>
-                    <h3 data-aos="fade-right">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        dolor sit amet consectetur adipisicing elit. </h3>
-                    <a href=""> Learn more</a>
-
-                </div>
+            <div class="text">
+                <h1 data-aos="zoom-out" data-aos-duration="3000">DELICACY</h1>
+                <h3 data-aos="fade-right">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    dolor sit amet consectetur adipisicing elit. </h3>
+                <a href=""> Learn more</a>
             </div>
-            <div class="imagec" data-aos="fade-left">
-                <div class="image">
-                    <img src="./images/coffee1.jpg" alt="">
-                </div>
+            <div class="image">
+                <img src="./images/coffee1.jpg" alt="">
             </div>
         </div>
     </section>
     <!-- services section -->
     <section id="services">
         <h1 data-aos="zoom-out">OUR SERVICES</h1>
-<div class="container">
-    <div data-aos="fade-right"> <img src="./images/FB_IMG_16526934330695966.jpg" alt=""> <h2>Wheat with Okra</h2><a href="#contact">Order Now</a>  </div>
-    <div data-aos="flip-right"> <img src="./images/FB_IMG_16526934270069813.jpg" alt=""> <h2>Eba with stew</h2><a href="#contact">Order Now</a> </div>
-    <div data-aos="flip-left"> <img src="./images/FB_IMG_16526934112934740.jpg" alt=""> <h2>Noodles</h2><a href="#contact">Order Now</a> </div>
-    <div data-aos="fade-left"> <img src="./images/FB_IMG_16526934522322568.jpg" alt=""> <h2>Spaghetti</h2><a href="#contact">Order Now</a> </div>
-    <div data-aos="fade-right"> <img src="./images/FB_IMG_16526934024098487.jpg" alt=""> <h2>Asorted snails</h2><a href="#contact">Order Now</a> </div>
-    <div data-aos="flip-right"> <img src="./images/FB_IMG_16526934582085207.jpg" alt=""> <h2>Pepper soup</h2><a href="#contact">Order Now</a> </div>
-    <div data-aos="flip-left"> <img src="./images/FB_IMG_16526935648775527.jpg" alt=""> <h2>Porridge</h2><a href="#contact">Order Now</a> </div>
-    <div data-aos="fade-left"> <img src="./images/FB_IMG_16526935718325595.jpg" alt=""> <h2>Rice and Beans</h2><a href="#contact">Order Now</a> </div>
+        <div class="container">
+            <div data-aos="fade-right"> <img src="./images/FB_IMG_16526934330695966.jpg" alt="">
+                <h2>Wheat with Okra</h2><a href="#contact">Order Now</a>
+            </div>
+            <div data-aos="flip-right"> <img src="./images/FB_IMG_16526934270069813.jpg" alt="">
+                <h2>Eba with stew</h2><a href="#contact">Order Now</a>
+            </div>
+            <div data-aos="flip-left"> <img src="./images/FB_IMG_16526934112934740.jpg" alt="">
+                <h2>Noodles</h2><a href="#contact">Order Now</a>
+            </div>
+            <div data-aos="fade-left"> <img src="./images/FB_IMG_16526934522322568.jpg" alt="">
+                <h2>Spaghetti</h2><a href="#contact">Order Now</a>
+            </div>
+            <div data-aos="fade-right"> <img src="./images/FB_IMG_16526934024098487.jpg" alt="">
+                <h2>Asorted snails</h2><a href="#contact">Order Now</a>
+            </div>
+            <div data-aos="flip-right"> <img src="./images/FB_IMG_16526934582085207.jpg" alt="">
+                <h2>Pepper soup</h2><a href="#contact">Order Now</a>
+            </div>
+            <div data-aos="flip-left"> <img src="./images/FB_IMG_16526935648775527.jpg" alt="">
+                <h2>Porridge</h2><a href="#contact">Order Now</a>
+            </div>
+            <div data-aos="fade-left"> <img src="./images/FB_IMG_16526935718325595.jpg" alt="">
+                <h2>Rice and Beans</h2><a href="#contact">Order Now</a>
+            </div>
 
-</div>
+        </div>
     </section>
     <!-- about section -->
     <section id="about">
         <div class="container">
             <div data-aos="fade-right">
-                <div>
-                    <img src="./images/FB_IMG_16526934024098487.jpg" alt="">
-                </div>
+                <img src="./images/FB_IMG_16526934024098487.jpg" alt="">
             </div>
             <div data-aos="fade-left">
-                <div>
-                    <h1>ABOUT US</h1>
-                    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et perspiciatis necessitatibus
-                        distinctio doloremque inventore dolorum laboriosam tenetur, voluptatibus molestiae suscipit
-                        blanditiis numquam laudantium dolorem non assumenda odio molestias expedita minima!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </P>
-                    <a href=""> Learn more</a>
-                </div>
-            </div>
-        </div>
-        <div class="customer">
-            <div class="container">
-                <h1>COMMON CUSTOMER'S QUESTION</h1>
+
+                <h1>ABOUT US</h1>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et perspiciatis necessitatibus
+                    distinctio doloremque inventore dolorum laboriosam tenetur, voluptatibus molestiae suscipit
+                    blanditiis numquam laudantium dolorem non assumenda odio molestias expedita minima!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </P>
+                <a href=""> Learn more</a>
 
             </div>
         </div>
+
     </section>
     <section id="contact">
         <div class="overlay"></div>
@@ -122,37 +127,42 @@
                 <h2 data-aos="fade-left">EMAIL:</h2>
                 <h3 data-aos="fade-left">kehindeokunola545@yahoo.com</h3>
                 <h2 data-aos="fade-left">PHONE:</h2>
-                <p data-aos="fade-left">09051708688</p>
-                <p data-aos="fade-left">08135629755</p>
+                <a href="tel:09051708688">
+                    <p data-aos="fade-left">09051708688</p>
+                </a>
+                <a href="tel:08135629755">
+                    <p data-aos="fade-left">08135629755</p>
+                </a>
                 <h2 data-aos="fade-left">ADDRESS</h2>
                 <p data-aos="fade-left">No. 42 Onigbongbo, ifeniyi street oke-isanmi Ilora, Oyo</p>
 
             </div>
             <div data-aos="fade-bottom">
                 <form action="">
-                    <input type="text" name="" id="" placeholder="Name" class="input"  data-aos="zoom-out">
+                    <input type="text" name="" id="" placeholder="Name" class="input" data-aos="zoom-out">
                     <input type="email" name="" id="" placeholder="Enter your email" class="input" data-aos="zoom-out">
                     <input type="text" name="" id="" placeholder="Address" class="input" data-aos="zoom-out">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Tell us what you want" data-aos="zoom-out"></textarea>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Tell us what you want"
+                        data-aos="zoom-out"></textarea>
                     <button class="submit1" data-aos="zoom-out">submit</button>
                 </form>
             </div>
-            <div >
+            <div>
                 <h1 data-aos="zoom-out">CHAT WITH US</h1>
 
-                <div data-aos="fade-right"> <span ><i class="fab fa-facebook" id="fa"></i></span>
+                <div data-aos="fade-right"> <span><i class="fab fa-facebook" id="fa"></i></span>
                     <h3>Facebook</h3>
                 </div>
-                <div  data-aos="fade-right"> <span ><i class="fab fa-whatsapp" id="wh"></i></span>
+                <div data-aos="fade-right"> <span><i class="fab fa-whatsapp" id="wh"></i></span>
                     <h3>Whatsapp</h3>
                 </div>
-                <div  data-aos="fade-right"> <span ><i class="fab fa-instagram" id="in"></i></span>
+                <div data-aos="fade-right"> <span><i class="fab fa-instagram" id="in"></i></span>
                     <h3>Instagram</h3>
                 </div>
-                <div  data-aos="fade-right"> <span ><i class="fab fa-twitter" id="tw"></i></span>
+                <div data-aos="fade-right"> <span><i class="fab fa-twitter" id="tw"></i></span>
                     <h3>Twitter</h3>
                 </div>
-                <div  data-aos="fade-right"> <span ><i class="fab fa-youtube" id="yo"></i></span>
+                <div data-aos="fade-right"> <span><i class="fab fa-youtube" id="yo"></i></span>
                     <h3>Youtube</h3>
                 </div>
 
@@ -171,9 +181,9 @@
             <hr>
             <div class="footer">
                 <div>
-                        <img src="./images/coffee1.jpg" alt="">
-                        <h1>EXPENDABLE FOODS</h1>   
-                        
+                    <img src="./images/coffee1.jpg" alt="">
+                    <h1>EXPENDABLE FOODS</h1>
+
                 </div>
                 <div></div>
                 <div></div>
@@ -183,7 +193,7 @@
             <p>Copyright &copy; 2022 Developed by Sleem Dee</p>
         </div>
     </footer>
-    
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./script.js"></script>
     <script src="./all.min.js"></script>
