--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
 <body>
     <div class="ani"></div>
     <div class="fixed">
-        <a href="https://m.facebook.com/okunola.kenny.7" data-aos="fade-left"> <i
-                class="fab fa-facebook icons fa-2x"></i></a>
-        <a href="https://t.me/Kenny_Sleem" data-aos="fade-left"><i class="fab fa-telegram icons fa-2x"></i></a>
-        <a href="https://www.linkedin.com/in/okunola-kehinde-53951a238" data-aos="fade-left"><i
-                class="fab fa-linkedin icons fa-2x"></i></a>
-        <a href="https://wa.me/2349051708688" data-aos="fade-left"> <i class="fab fa-whatsapp icons fa-2x"></i></a>
-        <a href="https://github.com/Okunolakenny" data-aos="fade-left"> <i class="fab fa-github icons fa-2x"></i></a>
+        <a href="https://m.facebook.com/okunola.kenny.7"> <i class="fab fa-facebook icons fa-2x"></i></a>
+        <a href="https://t.me/Kenny_Sleem"><i class="fab fa-telegram icons fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/okunola-kehinde-53951a238"><i class="fab fa-linkedin icons fa-2x"></i></a>
+        <a href="https://wa.me/2349051708688"> <i class="fab fa-whatsapp icons fa-2x"></i></a>
+        <a href="https://github.com/Okunolakenny"> <i class="fab fa-github icons fa-2x"></i></a>
     </div>
     <nav>
         <div class="container">
@@ -190,7 +188,7 @@
                 <div></div>
             </div>
             <hr>
-            <p>Copyright &copy; 2022 Developed by Sleem Dee</p>
+            <p>Copyright &copy; 2022 Developed by Okunola Kehinde</p>
         </div>
     </footer>
 
