--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="./all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-
+<div class="preloader">
+    <img src="./images/coffee1.jpg" alt="">
+</div>
 <body>
     <div class="ani"></div>
     <div class="fixed">
